# slacktoken

./: .gitignore  README.md  Taskfile.yml  base-dependencies.txt  base-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  tasks.py
.github/: dependabot.yml  renovate.json
.github/workflows/: checks.yml  dependabot-automerge.yml  integration.yml  release.yml  report-errors.yml  retry.yml
integration_tests/: apt-key.asc  apt-source.list  run.py
integration_tests/linux/: run.sh  wrapper.sh
integration_tests/linux-libsecret/: run.sh
integration_tests/linux-none/: run.sh
integration_tests/macos/: build.keychain-db  run.sh
integration_tests/windows/: run.ps1
slacktoken/: __main__.py  cookies.py  decryptor.py  exceptions.py  slack_configuration.py  token.py  version.py  windows.py
slacktoken/commands/: get.py  version.py
tests/: test_version.py
