[tool.poetry]
name = "slacktoken"
version = "0.0.0"
description = "A library for retrieving a Slack user token from an authenticated Slack application."
license = "BSD-2-Clause"
authors = [
	"Chris Gavin <chris@chrisgavin.me>",
]
repository = "https://github.com/chrisgavin/slacktoken/"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
versio = { version="*" }
importlib-metadata = { version="*" }
requests = { version="*" }
PyGObject = { version = "^3.42.1", platform = "linux" }
cryptography = ">=36.0.2,<43.0.0"
keyring = { version = ">=23.5,<25.0", platform = "darwin" }
pywin32 = {version = ">=304,<307", platform = "win32"}

[tool.poetry.dev-dependencies]
flake8 = { version="*" }
mypy = { version="*" }
pytest = { version="*" }
pytest-github-actions-annotate-failures = { version = "*", optional = true }
playwright = "^1.41.2"
pyotp = "^2.9.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
slacktoken = "slacktoken.__main__:main"

[build-system]
requires = [
	"poetry>=0.12",
	"poetry-dynamic-versioning",
]
build-backend = "poetry.masonry.api"
